# realtime-crypto-price-dashboard

./: Makefile  README.md  docker-compose.yaml  pyproject.toml  schema.sql
config/: settings.yml
consumer-spark/: spark-consume.py  utils.py
grafana/provisioning/dashboards/: Realtime Crypto Dashboard.json  dashboard.yaml
producer/: crypto-price-producer.py  models.py
scripts/: init-db.sql
